fix(drawer): spacing

--- a/packages/shoreline/src/themes/sunrise/components/drawer.css
+++ b/packages/shoreline/src/themes/sunrise/components/drawer.css
@@ -3,34 +3,35 @@
   --size-small: min(100%, 25rem);
   --size-medium: min(100%, 35rem);
   --sl-drawer-shadow: var(--sl-shadow-2);
+  box-sizing: content-box;
+  background-color: var(--sl-bg-base);
   display: grid;
   grid-template-rows: auto 1fr auto;
   position: fixed;
   z-index: 50;
   height: auto;
-  background-color: var(--sl-bg-base);
-  overflow: auto;
-  width: 100%;
-}
+  overflow: hidden auto;
 
-[data-sl-drawer-popover][data-size="small"] {
-  --size: var(--size-small);
-  --sl-drawer-footer-button-min-width: auto;
-  --sl-drawer-footer-button-width: 100%;
-}
+  &[data-size="small"] {
+    --size: var(--size-small);
+    --sl-drawer-footer-button-min-width: auto;
+    --sl-drawer-footer-button-width: 100%;
+  }
 
-[data-sl-drawer-popover][data-size="medium"] {
-  --size: var(--size-medium);
-}
+  &[data-size="medium"] {
+    --size: var(--size-medium);
+  }
 
-[data-sl-drawer-popover][vaul-drawer-direction="right"] {
-  flex-direction: row;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  box-shadow: var(--sl-drawer-shadow);
-  border-left: var(--sl-border-base);
-  width: var(--size);
+  &[vaul-drawer-direction="right"] {
+    flex-direction: row;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    box-shadow: var(--sl-drawer-shadow);
+    border-left: var(--sl-border-base);
+    width: var(--size);
+    min-width: var(--size);
+  }
 }
 
 [data-sl-drawer-header] {
@@ -53,11 +54,6 @@
 }
 
 [data-sl-drawer-footer] {
-  :where(button) {
-    min-width: var(--sl-drawer-footer-button-min-width);
-    width: var(--sl-drawer-footer-button-width);
-  }
-
   display: flex;
   justify-content: flex-end;
   position: sticky;
@@ -65,4 +61,9 @@
   column-gap: var(--sl-space-3);
   background: var(--sl-bg-base);
   border-top: var(--sl-border-base);
+
+  :where(button) {
+    min-width: var(--sl-drawer-footer-button-min-width);
+    width: var(--sl-drawer-footer-button-width);
+  }
 }
